# tally-ho

./: .codacy.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  build.sh  codecov.yml  docker-compose.yml  fabfile.py  ignore.codacy.yml  manage.py  pyproject.toml  requirements.txt  uwsgi.ini
.cursor/rules/: consistent-indentation.mdc  function-complexity.mdc  import-order.mdc  line-length.mdc  no-bare-excepts.mdc  no-multiple-statements-on-one-line.mdc  no-mutable-default-arguments.mdc  no-print-statements-in-production-code.mdc  no-trailing-whitespace.mdc  no-unused-function-arguments.mdc  no-unused-imports-or-variables.mdc  no-wildcard-imports.mdc
.github/workflows/: codacy-analysis.yaml  config.yml  lint.yml  security.yml
config/db/: db1_env
config/nginx/conf.d/: local.conf
data/uploaded/: README
deploy/: fabfile.py  start
deploy/context/: start
deploy/context/etc/nginx/: nginx.conf
deploy/etc/: sysctl.conf
deploy/etc/init/: tally.conf
deploy/etc/nginx/sites-available/: nginx.conf
deploy/etc/ssh/: sshd_config
docs/: Makefile  README.md
docs/overview/: README.md  pvp.md
docs/plans/: 2026-02-06-handle-null-gender-replacement-forms.md  2026-04-10-pvp-first-pass.md  2026-04-17-uv-modernization.md  2026-07-16-pvp-form-images.md
docs/source/: conf.py  forms.rst  index.rst  libs.rst  models.rst  views.rst
libya_tally/: settings.py  urls.py  wsgi.py
libya_tally/apps/tally/: admin.py
libya_tally/apps/tally/fixtures/: sites.json
libya_tally/libs/middleware/: disable_clientside_caching.py  exception_logging.py  idle_timeout.py  user_restrict.py
libya_tally/libs/models/: base_model.py  dependencies.py
libya_tally/libs/permissions/: groups.py
libya_tally/libs/reports/: progress.py
libya_tally/libs/templates/: base.html
libya_tally/libs/tests/: test_base.py  test_middleware.py  test_permission_groups.py  test_views_mixins.py
libya_tally/libs/utils/: collections.py  common.py  context_processors.py  dicts.py  time.py
libya_tally/libs/verify/: quarantine_checks.py
libya_tally/libs/views/: corrections.py  exports.py  form_state.py  mixins.py  pagination.py  session.py
libya_tally/settings/: common.py  default.py
locale/ar/LC_MESSAGES/: django.mo  django.po
odk-central-sync/: .pyodk_config.toml.example  README.md  pyproject.toml
odk-central-sync/src/: download_results_forms.py
odk-central-sync/tests/: test_download_results_forms.py
requirements/: common.pip  dev.pip
scripts/: create_database  db_backup_or_restore  deploy  deploy_replication  install_app  install_ubuntu  install_ubuntu.sh  quick_start  reload_all
tally/: settings.py  urls.py  wsgi.py
tally/apps/main/: admin.py
tally/libs/nose_plugins/: __init__.py
tally/libs/permissions/: groups.py
tally/libs/tests/: test_base.py  test_permission_groups.py  test_style.py  test_views_mixins.py
tally/libs/utils/: context_processors.py
tally_ho/: __init__.py  celery.py  celeryapp.py  urls.py  wsgi.py
tally_ho/apps/tally/: admin.py
tally_ho/libs/: validators.py
tally_ho/libs/middleware/: disable_clientside_caching.py  exception_logging.py  idle_timeout.py  user_restrict.py
tally_ho/libs/models/: base_model.py  dependencies.py
tally_ho/libs/nose_plugins/: __init__.py
tally_ho/libs/permissions/: groups.py
tally_ho/libs/pvp/: bundle.py  import_submission.py  validation.py
tally_ho/libs/reports/: list_base_data_view.py  progress.py
tally_ho/libs/templates/: base.html
tally_ho/libs/tests/: test_base.py  test_middleware.py  test_style.py
tally_ho/libs/utils/: active_status.py  cache_model_instances_count_to_memcache.py  collections.py  context_processors.py  disable_test_logs.py  enum.py  form.py  functions.py  image_validation.py  import_data.py  memcache.py  numbers.py  query_set_helpers.py  strings.py  templates.py  time.py
tally_ho/libs/verify/: quarantine_checks.py
tally_ho/libs/views/: corrections.py  errors.py  exports.py  form_state.py  mixins.py  pagination.py  session.py
tally_ho/settings/: common.py  default.py  dev.py  docker.py  test.py
tally_system/: urls.py  wsgi.py
tally_system/apps/tally/: admin.py
tally_system/libs/: validators.py
tally_system/libs/middleware/: exception_logging.py
tally_system/libs/models/: dependencies.py
tally_system/libs/reports/: progress.py
tally_system/libs/templates/: base.html
tally_system/libs/tests/: test_base.py  test_middleware.py
tally_system/libs/utils/: context_processors.py
tally_system/libs/verify/: quarantine_checks.py
tally_system/libs/views/: corrections.py  exports.py  form_state.py  mixins.py
tally_system/settings/: common.py  default.py
tests/performance-tests/: README.md  Some-instructions.rtf  center_details.py  centerdetails.py  data.py  data_entry1_clerk.py  intake_barcodes.py  intake_clerk_test.py  intakebarcodes.py  process_result_form_test.py
(+921 files in other folders)
