[project]
name = "tally-ho"
version = "0.1.0"
description = "Election results data entry and verification software"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django==5.2.8",
    "django-datatables-view==1.20.0",
    "django-enumfields2==3.0.2",
    "django-guardian==2.4.0",
    "django-queryset-csv==1.1.0",
    "django-reversion==5.0.4",
    "django-tracking2==0.5.1",
    "psycopg[binary]>=3.1",
    "python-dateutil==2.8.2",
    "xhtml2pdf==0.2.17",
    "python-pptx==0.6.21",
    "duckdb==1.4.3",
    "pymemcache==4.0.0",
    "celery==5.3.1",
    "redis==4.5.5",
    "python-memcached==1.59",
    "pytest==7.4.2",
    "pytest-django==4.5.2",
    "gunicorn>=23,<24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tally_ho"]

[dependency-groups]
dev = [
    "coverage",
    "coveralls",
    "django-debug-toolbar==4.1.0",
    "mock",
    "django-extensions",
    "ipython",
    "ipdb",
    "sphinx",
    "autopep8",
    "pydot",
    "locust",
    "ruff",
    "pre-commit",
    "beautifulsoup4",
    "pytest-cov",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tally_ho/apps/tally/migrations/",
    "tally_ho/apps/tally/models/__init__.py",
]

line-length = 88
indent-width = 4

target-version = "py312"

# Pyflakes (`F`) plus a subset of pycodestyle (`E4`, `E7`, `E9`).
# This matches the ruleset that was enforced by the former `ruff.toml`
# prior to the uv migration.
lint.select = ["E4", "E7", "E9", "F"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tally_ho.settings.common"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "manage.py",
    "tally_ho/wsgi.py",
    "*/migrations/*",
    "*/venv/*''*/settings/*",
    "*/templates/*"
]

[tool.coverage.report]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "manage.py",
    "tally_ho/wsgi.py",
    "*/migrations/*",
    "*/venv/*''*/settings/*",
    "*/templates/*"
]
