[project]
name = "odk-central-sync"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.3.1",
    "pandas>=3.0.1",
    "pyodk>=1.2.1",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
]

[project.scripts]
download-results = "src.download_results_forms:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
